--- a/src/resources/template/coin/mybatis_service.twig
+++ b/src/resources/template/coin/mybatis_service.twig
@@ -1,6 +1,6 @@
 package {{groupId}}.service;
 
-import com.tbex.common.usural.service.CrudService;
+import io.bhex.exchange.mybatis.service.CrudService;
 import {{groupId}}.domain.{{table.titleName}};
 import {{groupId}}.domain.example.{{table.titleName}}Example;
 
