--- a/src/resources/template/coin/mybatis_service_impl.twig
+++ b/src/resources/template/coin/mybatis_service_impl.twig
@@ -1,6 +1,6 @@
 package {{groupId}}.service.impl;
 
-import com.tbex.common.usural.service.abs.AbsCrudService;
+import io.bhex.exchange.mybatis.service.AbstractCrudService;
 import {{groupId}}.data.{{table.titleName}}Repository;
 import {{groupId}}.domain.{{table.titleName}};
 import {{groupId}}.domain.example.{{table.titleName}}Example;
@@ -14,7 +14,13 @@ import org.springframework.stereotype.Service;
 @Slf4j
 @Service
 public class {{table.titleName}}ServiceImpl
-    extends AbsCrudService<{{table.titleName}}Repository, {{table.titleName}}, {{table.titleName}}Example, {{table.primaryColumn.javaType}}>
+    extends AbstractCrudService<{{table.titleName}}Repository, {{table.titleName}}, {{table.titleName}}Example, {{table.primaryColumn.javaType}}>
     implements {{table.titleName}}Service {
 
+    @Override
+    protected {{table.titleName}}Example getPageExample(String fieldName, String keyWord) {
+        final {{table.titleName}}Example example = new {{table.titleName}}Example();
+        example.createCriteria().andFieldLike(fieldName, keyWord);
+        return example;
+    }
 }
