--- a/src/resources/template/coin_sharding/mybatis_repository.twig
+++ b/src/resources/template/coin_sharding/mybatis_repository.twig
@@ -1,7 +1,7 @@
 package {{ groupId }}.data;
 {%- set tableName = table.titleName %}
 
-import com.tbex.common.sharding.operation.CrudOperation;
+import io.bhex.exchange.mybatis.shard.data.CrudRepository;
 import {{ groupId }}.domain.{{ tableName }};
 import {{ groupId }}.domain.example.{{ tableName }}Example;
 import org.springframework.stereotype.Repository;
@@ -11,5 +11,5 @@ import org.springframework.stereotype.Repository;
  */
 @Repository
 public interface {{ tableName }}Repository
-    extends CrudOperation<{{ tableName }}, {{ tableName }}Example, {{ table.primaryColumn.javaType }}> {
+    extends CrudRepository<{{ tableName }}, {{ tableName }}Example, {{ table.primaryColumn.javaType }}> {
 }
