--- a/src/window/app.fxml
+++ b/src/window/app.fxml
@@ -2,8 +2,17 @@
 
 <?import javafx.collections.FXCollections?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.ProgressBar?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import java.lang.String?>
 <BorderPane xmlns:fx="http://javafx.com/fxml/1" fx:id="appPane" xmlns="http://javafx.com/javafx/8.0.121"
             fx:controller="controller.AppController">
@@ -57,8 +66,8 @@
                             <FXCollections fx:factory="observableArrayList">
                                 <String fx:value="boyce"/>
                                 <String fx:value="java"/>
-                                <String fx:value="58coin"/>
-                                <String fx:value="58coin_sharding"/>
+                                <String fx:value="bhex"/>
+                                <String fx:value="bhex_shard"/>
                             </FXCollections>
                         </items>
                     </ChoiceBox>
